@@ -5,6 +5,7 @@ nik2img changelog
 Version 0.2.3,             2009:
 --------------------------------
 
+* Fixed bug in zoom levels code (thanks aub)
 
 * Added support for the Mapnik ProjTransform class (http://trac.mapnik.org/ticket/117)
 
